--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,6 +11,7 @@
     <title>Start page</title>
     <h:outputStylesheet library="css" name="style.css"/>
     <h:outputScript library="js" name="clock.js"/>
+    <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/images/favicon.jpg"/>
 </h:head>
 
 <h:body>
